--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "moment": "^2.29.1",
+        "mongoose": "^5.12.3",
         "nodemon": "^2.0.7",
         "path": "^0.12.7",
         "uuid": "^8.3.2"
