--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "mongoose": "^5.12.3",
         "nodemon": "^2.0.7",
         "path": "^0.12.7",
+        "sqlite3": "^5.0.2",
         "uuid": "^8.3.2"
     }
 }
